--- a/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-items.tpl.html
+++ b/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-items.tpl.html
@@ -1,38 +1,69 @@
 ﻿<div class="blade-static __bottom __quote">
-    <table class="table __collapsed">
-        <tr class="table-item">
-            <td class="table-col">Sub Total (placed)</td>
-            <td class="table-col __price">{{blade.currentEntity.totals.originalSubTotalExlTax | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
-        </tr>
-        <tr class="table-item">
-            <td class="table-col">Adjustment Quote</td>
-            <td class="table-col __price">{{blade.currentEntity.totals.adjustmentQuoteExlTax | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
-        </tr>
-        <tr class="table-item">
-            <td class="table-col">Sub Total</td>
-            <td class="table-col __price">{{blade.currentEntity.totals.subTotalExlTax | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
-        </tr>
-        <tr class="table-item">
-            <td class="table-col">Shipping</td>
-            <td class="table-col __price">{{blade.currentEntity.totals.shippingTotal | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
-        </tr>
-        <tr class="table-item">
-            <td class="table-col">Discount</td>
-            <td class="table-col __price">{{blade.currentEntity.totals.discountTotal | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
-        </tr>
-        <tr class="table-item __total">
-            <td class="table-col">Grand Total</td>
-            <td class="table-col __price">{{blade.currentEntity.totals.grandTotalExlTax | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
-        </tr>
-        <tr class="table-item">
-            <td class="table-col">Taxes</td>
-            <td class="table-col __price">{{blade.currentEntity.totals.taxTotal | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
-        </tr>
-        <tr class="table-item __total">
-            <td class="table-col">Grand Total (Incl. Taxes)</td>
-            <td class="table-col __price">{{blade.currentEntity.totals.grandTotalInclTax | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
-        </tr>
-    </table>
+    <div class="clearfix">
+        <div class="column">
+            <div class="quote-discount">
+                <div class="quote-t">{{totals.isDiscountAbsolute ? 'New subtotal, ' + blade.currentEntity.currency : 'Relative discount, %'}}</div>
+                <div class="form-input __mini __inline">
+                    <input money required ng-model="blade.currentEntity.manualSubTotal" ng-change="recalculate()" ng-hide="!totals.isDiscountAbsolute">
+                    <input money required ng-model="blade.currentEntity.manualRelDiscountAmount" ng-change="recalculate()" ng-hide="totals.isDiscountAbsolute">
+                </div>
+                <button class="btn" ng-click="blade.currentEntity.manualSubTotal=blade.currentEntity.manualRelDiscountAmount=0;totals.isDiscountAbsolute=!totals.isDiscountAbsolute">{{totals.isDiscountAbsolute ? 'Enter relative discount': 'Enter new subtotal'}}</button>
+            </div>
+            <div class="form-group">
+                <label class="form-label">Shipping method</label>
+                <div class="form-input">
+                    <ui-select ng-model="blade.currentEntity.shipmentMethod" ng-change="recalculate()">
+                        <ui-select-match placeholder="Select...">{{$select.selected.name}} - {{$select.selected.price}} {{$select.selected.currency}}</ui-select-match>
+                        <ui-select-choices repeat="x in blade.shippingMethods | filter: { name: $select.search }">
+                            <span ng-bind-html="x.name +' - '+ x.price+' '+ x.currency | highlight: $select.search"></span>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="form-label">Manual shipping total, {{blade.currentEntity.currency}}</label>
+                <div class="form-input">
+                    <input money ng-model="blade.currentEntity.manualShippingTotal" ng-change="recalculate()">
+                </div>
+            </div>
+        </div>
+        <div class="column">
+            <table class="table __collapsed">
+                <tr class="table-item">
+                    <td class="table-col">Sub Total (placed)</td>
+                    <td class="table-col __price">{{blade.currentEntity.totals.originalSubTotalExlTax | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
+                </tr>
+                <tr class="table-item">
+                    <td class="table-col">Adjustment Quote</td>
+                    <td class="table-col __price">{{blade.currentEntity.totals.adjustmentQuoteExlTax | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
+                </tr>
+                <tr class="table-item">
+                    <td class="table-col">Sub Total</td>
+                    <td class="table-col __price">{{blade.currentEntity.totals.subTotalExlTax | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
+                </tr>
+                <tr class="table-item">
+                    <td class="table-col">Shipping</td>
+                    <td class="table-col __price">{{blade.currentEntity.totals.shippingTotal | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
+                </tr>
+                <tr class="table-item">
+                    <td class="table-col">Discount</td>
+                    <td class="table-col __price">{{blade.currentEntity.totals.discountTotal | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
+                </tr>
+                <tr class="table-item __total">
+                    <td class="table-col">Grand Total</td>
+                    <td class="table-col __price">{{blade.currentEntity.totals.grandTotalExlTax | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
+                </tr>
+                <tr class="table-item">
+                    <td class="table-col">Taxes</td>
+                    <td class="table-col __price">{{blade.currentEntity.totals.taxTotal | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
+                </tr>
+                <tr class="table-item __total">
+                    <td class="table-col">Grand Total (Incl. Taxes)</td>
+                    <td class="table-col __price">{{blade.currentEntity.totals.grandTotalInclTax | number:2}}&nbsp;{{blade.currentEntity.currency}}</td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </div>
 <div class="blade-content __xxlarge-wide">
     <div class="blade-inner">
@@ -124,38 +155,6 @@
                         </tr>
                     </tbody>
                 </table>
-            </div>
-
-            <div class="quote-discount">
-                <div class="quote-t">{{totals.isDiscountAbsolute ? 'New subtotal, ' + blade.currentEntity.currency : 'Relative discount, %'}}</div>
-                <div class="form-input __mini __inline">
-                    <input money required ng-model="blade.currentEntity.manualSubTotal" ng-change="recalculate()" ng-hide="!totals.isDiscountAbsolute">
-                    <input money required ng-model="blade.currentEntity.manualRelDiscountAmount" ng-change="recalculate()" ng-hide="totals.isDiscountAbsolute">
-                </div>
-                <button class="btn" ng-click="blade.currentEntity.manualSubTotal=blade.currentEntity.manualRelDiscountAmount=0;totals.isDiscountAbsolute=!totals.isDiscountAbsolute">{{totals.isDiscountAbsolute ? 'Enter relative discount': 'Enter new subtotal'}}</button>
-            </div>
-            <div class="columns clearfix">
-                <div class="column">
-                    <div class="form-group">
-                        <label class="form-label">Shipping method</label>
-                        <div class="form-input">
-                            <ui-select ng-model="blade.currentEntity.shipmentMethod" ng-change="recalculate()">
-                                <ui-select-match placeholder="Select...">{{$select.selected.name}} - {{$select.selected.price}} {{$select.selected.currency}}</ui-select-match>
-                                <ui-select-choices repeat="x in blade.shippingMethods | filter: { name: $select.search }">
-                                    <span ng-bind-html="x.name +' - '+ x.price+' '+ x.currency | highlight: $select.search"></span>
-                                </ui-select-choices>
-                            </ui-select>
-                        </div>
-                    </div>
-                </div>
-                <div class="column">
-                    <div class="form-group">
-                        <label class="form-label">Manual shipping total, {{blade.currentEntity.currency}}</label>
-                        <div class="form-input">
-                            <input money ng-model="blade.currentEntity.manualShippingTotal" ng-change="recalculate()">
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
