--- a/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-detail.tpl.html
+++ b/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-detail.tpl.html
@@ -2,17 +2,8 @@
     <div class="blade-inner">
         <div class="inner-block">
             <div class="quote-status canceled" ng-if="blade.currentEntity.status">
-                <div class="status" ng-bind="blade.currentEntity.status"></div>
+                <div class="status">{{blade.currentEntity.status}}{{blade.currentEntity.isLocked?', on Hold':''}}</div>
                 <div class="reason" ng-bind="blade.currentEntity.cancelReason" ng-if="blade.currentEntity.isCancelled"></div>
-            </div>
-            <div class="form-group">
-                <label class="form-label">On hold</label>
-                <div class="form-input">
-                    <label class="form-label __switch">
-                        <input type="checkbox" ng-model="blade.currentEntity.isOnHold" />
-                        <span class="switch"></span>
-                    </label>
-                </div>
             </div>
             <form class="form" name="detailForm">
                 <div class="clearfix">
@@ -24,7 +15,7 @@
                             </li>
                             <li class="list-item">
                                 <div class="list-t">Customer organization</div>
-                                <div class="list-descr">{{blade.currentEntity.organizationName}}</div>
+                                <div class="list-descr">{{blade.currentEntity.organizationName?blade.currentEntity.organizationName:'Not defined'}}</div>
                             </li>
                         </ul>
                         <div class="form-group">
