--- a/VirtoCommerce.QuoteModule.Web/Scripts/blades/quotes-list.tpl.html
+++ b/VirtoCommerce.QuoteModule.Web/Scripts/blades/quotes-list.tpl.html
@@ -21,36 +21,36 @@
                                 </label>
                             </th>
                             <th class="table-col">Quote #</th>
-                            <th class="table-col __date">Created</th>
-                            <th class="table-col">Assigned to</th>
-                            <th class="table-col">Customer</th>
                             <th class="table-col">Status</th>
+                            <th class="table-col">Items</th>
+                            <th class="table-col">Customer</th>
+                            <th class="table-col __date">Created</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="table-item" ng-repeat="data in blade.currentEntities track by data.id" ng-class="{'__selected': data.id === selectedNodeId}" context-menu data-target="ql_menu_{{data.id}}" ng-click='selectNode(data)'>
+                        <tr class="table-item" ng-repeat="data in blade.currentEntities track by data.id" ng-class="{'__selected': data.id === selectedNodeId}" context-menu data-target="ql_menu_{{data.id}}">
                             <td class="table-col">
                                 <label class="form-control __checkbox">
                                     <input type="checkbox" ng-model="data.$selected">
                                     <span class="check"></span>
                                 </label>
                             </td>
-                            <td class="table-col">
+                            <td class="table-col" ng-click='selectNode(data)'>
                                 <span>{{data.number}}</span>
                             </td>
-                            <td class="table-col">
-                                <span class="table-date" title="{{data.createdDate}}">{{data.createdDate | date }}</span>
+                            <td class="table-col" ng-click='selectNode(data)'>
+                                <span>{{data.status}}</span>
                             </td>
-                            <td class="table-col">
-                                <span>{{data.employeeName}}</span>
+                            <td class="table-col" ng-click='selectNode(data)'>
+                                <span>{{data.items.length}} items</span>
                             </td>
-                            <td class="table-col">
+                            <td class="table-col" ng-click='selectNode(data)'>
                                 <span>{{data.customerName}}</span>
                                 <span class="table-descr" ng-if="data.organizationName">{{data.organizationName}}</span>
                                 <span class="table-descr" ng-if="data.customerEmail">{{data.customerEmail}}</span>
                             </td>
-                            <td class="table-col">
-                                <span>{{data.status}}</span>
+                            <td class="table-col" ng-click='selectNode(data)'>
+                                <span class="table-date" am-time-ago="data.createdDate"></span>
                                 <ul role="menu" class="menu __context" id="ql_menu_{{data.id}}">
                                     <li class="menu-item" ng-click='edit(data)'>
                                         <i class="menu-ico fa fa-edit"></i> Manage
