generic permission "manage" refactored to 4 separate CRUD permissions everywhere

--- a/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-detail.tpl.html
+++ b/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-detail.tpl.html
@@ -19,7 +19,7 @@
                             </li>
                         </ul>
                         <div class="form-group">
-                            <label class="form-label">Status <a href="" ng-click="openDictionarySettingManagement()" va-permission="platform:setting:manage"><i class="form-ico fa fa-pencil"></i></a></label>
+                            <label class="form-label">Status <a href="" ng-click="openDictionarySettingManagement()" va-permission="platform:setting:update"><i class="form-ico fa fa-pencil"></i></a></label>
                             <div class="form-input">
                                 <ui-select ng-model="blade.currentEntity.status" required>
                                     <ui-select-match placeholder="Select...">{{$select.selected}}</ui-select-match>
