--- a/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-items.tpl.html
+++ b/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-items.tpl.html
@@ -114,13 +114,10 @@
                                 <span>{{data.salePrice}}</span>
                             </td>
                             <td class="table-col">
-                                <a class="list-link" ng-click="addProposalTier(data)">Add</a>
+                                <a class="list-link" ng-click="addProposalTier(data, $index)">Add</a>
                                 <div ng-repeat="p in data.proposalPrices | orderBy:['quantity','price']" class="form-input __mini __number">
                                     <input smart-float num-type="integer" required ng-model="p.quantity" ng-change="recalculate()">
                                 </div>
-                                <!--<div ng-repeat="p in data.proposalPrices | orderBy:['quantity','price']" style="height: 34px;">
-                                    <span>{{p.quantity}}</span>
-                                </div>-->
                             </td>
                             <td class="table-col">
                                 <a class="list-link" ng-click="deleteProposalTier(data)">Remove</a>
@@ -129,11 +126,10 @@
                                         <label class="form-label">
                                             <input type="radio" ng-model="data.selectedTierPrice" ng-value="p" ng-change="recalculate()">
                                             <span class="check"></span>
-                                            <!--<span class="name">Green</span>-->
                                         </label>
                                     </div>
                                     <div class="form-input __mini __inline">
-                                        <input money required ng-model="p.price" ng-change="recalculate()" focus-on="focusIndex{{$index}}">
+                                        <input money required ng-model="p.price" ng-change="recalculate()" focus-on="focusIndex{{$parent.$index}}">
                                     </div>
                                 </div>
                             </td>
