file upload progress indicator added to all file uploads

--- a/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-assets.tpl.html
+++ b/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-assets.tpl.html
@@ -24,7 +24,7 @@
                 </form>
 
                 <div ng-show="uploader.isUploading">
-                    <div class="sub-t">Progress:</div>
+                    <div class="sub-t">Progress</div>
                     <div class="progress-bar __aqua" ng-style="{'width': uploader.progress + '%'}"></div>
                 </div>
                 
